changed buttons to icons

--- a/src/app/adminregister/adminregister.component.html
+++ b/src/app/adminregister/adminregister.component.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <div class="row">
               <div>
-                <label for="" class="form-label text-success">Admin Name</label>
+                <label for="" class="form-label text-dark"><b>Admin Name</b></label>
                 <input
                   type="text"
                   name=""
@@ -36,7 +36,7 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label text-success"> Admin Mail</label>
+                <label for="" class="form-label text-dark"> <b>Admin Mail</b></label>
                 <input
                   type="text"
                   name=""
@@ -61,8 +61,8 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label text-success"
-                  >Admin Designation</label
+                <label for="" class="form-label text-dark"
+                  ><b>Admin Designation</b></label
                 >
                 <input
                   type="text"
@@ -84,7 +84,7 @@
               </div>
 
               <div>
-                <label for="" class="form-label text-success">Admin Id</label>
+                <label for="" class="form-label text-dark"><b>Admin Id</b></label>
                 <input
                   type="text"
                   name=""
@@ -104,8 +104,8 @@
                   </div>
               </div>
               <div>
-                <label for="" class="form-label text-success"
-                  >Admin Mobile Number</label
+                <label for="" class="form-label text-dark"
+                  ><b>Admin Mobile Number</b></label
                 >
                 <input
                   type="text"
@@ -141,8 +141,8 @@
 
               </div>
               <div>
-                <label for="" class="form-label text-success"
-                  >Admin Password</label
+                <label for="" class="form-label text-dark"
+                  ><b>Admin Password</b></label
                 >
                 <input
                   type="text"
@@ -181,7 +181,7 @@
                   class="btn btn-success text-dark w-50 p-2 mt-4"
                   (click)="register()"
                 >
-                  Register
+                  <b>Register</b>
                 </button>
               </div>
             </div>
