--- a/src/app/edittask/edittask.component.html
+++ b/src/app/edittask/edittask.component.html
@@ -29,10 +29,10 @@
                 data-bs-target="#myEmptyModal"
                 (click)="editTask(task)"
               >
-                Edit
+                <i class="bi bi-pencil-square"></i>
               </button>
               <button class="btn btn-danger" (click)="deleteTask(task._id)" >
-                Delete
+                <i class="bi bi-trash3"></i>
               </button>
               
             </td>
