--- a/src/app/employeelogin/employeelogin.component.html
+++ b/src/app/employeelogin/employeelogin.component.html
@@ -6,14 +6,14 @@
           <form [formGroup]="loginForm">
             <div class="card-header">
               <div class="row">
-                <h1 class="text-center text-light">Login Form</h1>
+                <h1 class="text-center text-dark">Login Form</h1>
                 <p class="text-center">(Employee)</p>
               </div>
             </div>
             <div class="card-body">
               <div class="row">
                 <div>
-                  <label for="" class="form-label text-light">Emp_Mail</label>
+                  <label for="" class="form-label text-dark"><b>Emp_Mail</b></label>
                   <input
                     type="text"
                     name=""
@@ -38,8 +38,8 @@
                   </div>
                 </div>
                 <div>
-                  <label for="" class="form-label text-light"
-                    >Emp_Password</label
+                  <label for="" class="form-label text-dark"
+                    ><b>Emp_Password</b></label
                   >
                   <input
                     type="text"
@@ -70,12 +70,12 @@
                     </div>
                   </div>
                 </div>
-                <div class="text-center">
+                <div class="text-center ">
                   <button
-                    class="btn btn-success btn w-50 p-2 mt-4"
+                    class="btn btn-success text-dark btn w-50 p-2 mt-4"
                     (click)="login()"
                   >
-                    Sign-in
+                    <b>Sign-in</b>
                   </button>
                 </div>
               </div>
