--- a/src/app/employeeregister/employeeregister.component.html
+++ b/src/app/employeeregister/employeeregister.component.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <div class="row">
               <div>
-                <label for="" class="form-label text-success">Employee Name</label>
+                <label for="" class="form-label text-dark"><b>Employee Name</b></label>
                 <input
                   type="text"
                   name=""
@@ -38,7 +38,7 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label text-success"> Employee Id</label>
+                <label for="" class="form-label text-dark"> <b>Employee Id</b></label>
                 <input
                   type="text"
                   name=""
@@ -62,7 +62,7 @@
               </div>
 
               <div>
-                <label for="" class="form-label text-success"> Employee Mail</label>
+                <label for="" class="form-label text-dark"> <b>Employee Mail</b></label>
                 <input
                   type="text"
                   name=""
@@ -86,7 +86,7 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label text-success"> Employee Mobile Number</label>
+                <label for="" class="form-label text-dark"> <b>Employee Mobile Number</b></label>
                 <input
                   type="text"
                   name=""
@@ -120,7 +120,7 @@
               </div>
 
               <div>
-                <label for="" class="form-label text-success">Employee Password</label>
+                <label for="" class="form-label text-dark"><b>Employee Password</b></label>
                 <input
                   type="text"
                   name=""
@@ -156,7 +156,7 @@
                   class="btn btn-success text-dark btn w-50 p-2 mt-4"
                   (click)="register()"
                 >
-                  Register
+                  <b>Register</b>>
                 </button>
               </div>
             </div>
