--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
             class="nav-link text-dark"
             routerLink="superadminlogin"
             routerLinkActive="active"
-            >SuperAdmin</a
+            ><u><b>SuperAdmin</b></u></a
           >
         </li>
         <li class="nav-item">
@@ -30,7 +30,7 @@
             class="nav-link text-dark"
             routerLink="adminlogin"
             routerLinkActive="active"
-            >Admin</a
+            ><u><b>Admin</b></u></a
           >
         </li>
         <li class="nav-item">
@@ -38,7 +38,7 @@
             class="nav-link text-dark"
             routerLink="teamleadlogin"
             routerLinkActive="active"
-            >TeamLead</a
+            ><u><b>TeamLead</b></u></a
           >
         </li>
         <li class="nav-item">
@@ -46,7 +46,7 @@
             class="nav-link text-dark"
             routerLink="employeelogin"
             routerLinkActive="active"
-            >Employee</a
+            ><u><b>Employee</b></u></a
           >
         </li>
       </ul>
