--- a/src/app/superadminregister/superadminregister.component.html
+++ b/src/app/superadminregister/superadminregister.component.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <div class="row">
               <div>
-                <label for="" class="form-label"> Name</label>
+                <label for="" class="form-label"> <b>Name</b></label>
                 <input
                   type="text"
                   name=""
@@ -36,7 +36,7 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label"> Mobile Number</label>
+                <label for="" class="form-label"> <b>Mobile Number</b></label>
                 <input
                   type="text"
                   name=""
@@ -68,7 +68,7 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label"> Mail</label>
+                <label for="" class="form-label"><b> Mail</b></label>
                 <input
                   type="text"
                   name=""
@@ -92,7 +92,7 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label"> Password</label>
+                <label for="" class="form-label"> <b>Password</b></label>
                 <input
                   type="text"
                   name=""
@@ -122,7 +122,7 @@
                   class="btn btn-success btn w-50 p-2 mt-4"
                   (click)="register()"
                 >
-                  Register
+                  <b>Register</b>
                 </button>
               </div>
             </div>
