--- a/src/app/teamlead/teamlead.component.html
+++ b/src/app/teamlead/teamlead.component.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <div class="row">
               <div>
-                <label for="" class="form-label text-primary">Task Name</label>
+                <label for="" class="form-label text-dark"><b>Task Name</b></label>
                 <input
                   type="text"
                   name=""
@@ -20,7 +20,7 @@
                 />
               </div>
               <div>
-                <label for="" class="form-label text-primary">Task Description</label>
+                <label for="" class="form-label text-dark"><b>Task Description</b></label>
                 <input
                   type="text"
                   name=""
@@ -29,7 +29,7 @@
                 />
               </div>
               <div>
-                <label for="" class="form-label text-primary">Task Duration</label>
+                <label for="" class="form-label text-dark"><b>Task Duration</b></label>
                 <input
                   type="text"
                   name=""
@@ -40,10 +40,10 @@
               
               <div class="text-center">
                 <button
-                  class="btn btn-success btn w-50 p-2 mt-4"
+                  class="btn btn-success text-dark btn w-50 p-2 mt-4"
                   (click)="task()"
                 >
-                  Task
+                  <b>Task</b>
                 </button>
               </div>
             </div>
