--- a/src/app/viewemployee/viewemployee.component.html
+++ b/src/app/viewemployee/viewemployee.component.html
@@ -32,11 +32,11 @@
                 data-bs-target="#myEmptyModal"
                 (click)="editEmployee(employee)"
               >
-                Edit
+                <i class="bi bi-pencil-square"></i>
               </button>
               
               <button class="btn btn-danger" (click)="deleteEmployee(employee._id)">
-                Delete
+                <i class="bi bi-trash3"></i>
               </button>
               
             </td>
