--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -18,19 +18,19 @@
     <ul class="navbar-nav ms-auto">
       <li class="nav-item">
         <a
-          class="nav-link text-dark"
+          class="nav-link text-dark "
           routerLink="a-profile"
           routerLinkActive="active"
-          >Profile</a
+          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder; "></i></a
         >
       </li>
       <li class="nav-item">
         <a
-          class="nav-link text-dark"
+          class="nav-link text-dark "
           routerLink="/"
           routerLinkActive="active"
           (click)="logout()"
-          ><i class="bi bi-person" style="font-size: 20px; font-weight: bolder; color: red;"></i></a
+          ><i class="bi bi-box-arrow-right" style="font-size: 30px; font-weight: bolder; "></i></a
         >
       </li>
     </ul>
@@ -45,11 +45,11 @@
         <div class="display-flex p-2">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="teamleadregister">Add Teamlead</a>
+                    <a class="nav-link text-dark" routerLink="teamleadregister"><b>Add Teamlead</b></a>
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="viewteamlead">View Teamlead</a>
+                    <a class="nav-link text-dark" routerLink="viewteamlead"><b>View Teamlead</b></a>
                 </li>
             </ul>
         </div>
