--- a/src/app/employee-dashboard/employee-dashboard.component.html
+++ b/src/app/employee-dashboard/employee-dashboard.component.html
@@ -21,7 +21,7 @@
           class="nav-link text-dark"
           routerLink="emp-profile"
           routerLinkActive="active"
-          >Profile</a
+          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder; "></i></a
         >
       </li>
       <li class="nav-item">
@@ -30,7 +30,7 @@
           routerLink="/"
           routerLinkActive="active"
           (click)="logout()"
-          >Logout</a
+          ><i class="bi bi-box-arrow-right" style="font-size: 30px; font-weight: bolder; "></i></a
         >
       </li>
     </ul>
@@ -46,7 +46,7 @@
             <ul class="navbar-nav">
                 
                 <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="viewtask">View task</a>
+                    <a class="nav-link text-dark" routerLink="viewtask"><b>View Task</b></a>
                 </li>
             </ul>
         </div>
