--- a/src/app/sp-dashboard/sp-dashboard.component.html
+++ b/src/app/sp-dashboard/sp-dashboard.component.html
@@ -21,7 +21,7 @@
           class="nav-link text-dark"
           routerLink="sa-profile"
           routerLinkActive="active"
-          >Profile</a
+          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder; "></i></a
         >
       </li>
       <li class="nav-item">
@@ -30,7 +30,7 @@
           routerLink="/"
           routerLinkActive="active"
           (click)="logout()"
-          >Logout</a
+          ><i class="bi bi-box-arrow-right" style="font-size: 30px; font-weight: bolder; "></i></a
         >
       </li>
     </ul>
@@ -46,11 +46,11 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link text-dark" routerLink="adminregister"
-              >Add Admin</a
+              ><b>Add Admin</b></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" routerLink="viewadmin">View Admin</a>
+            <a class="nav-link text-dark" routerLink="viewadmin"><b>View Admin</b></a>
           </li>
         </ul>
       </div>
