--- a/src/app/superadminlogin/superadminlogin.component.css
+++ b/src/app/superadminlogin/superadminlogin.component.css
@@ -24,14 +24,12 @@
   );
   font-size: 25px;
 }
-.company-name {
-  font-size: 50px;
-}
+
 .hom1 {
-  background-image: url("/images/bg1.png");
+  background-image: url("/images/bg4.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 585px;
+  height: 500px;
 }
 .card {
   background-color: rgba(255, 255, 255, 0.2);
@@ -44,5 +42,5 @@
   max-width: 400px;
 }
 .btn {
-  background: linear-gradient(180deg, rgb(200, 111, 126), rgb(87, 87, 250));
+  background: linear-gradient(180deg, rgb(151, 191, 215), rgb(164, 164, 237));
 }
