--- a/src/app/superadminlogin/superadminlogin.component.html
+++ b/src/app/superadminlogin/superadminlogin.component.html
@@ -5,14 +5,14 @@
         <form [formGroup]="loginForm">
           <div class="card-header">
             <div class="row">
-              <h1 class="text-center text-light">Login Form</h1>
+              <h1 class="text-center text-dark">Login Form</h1>
               <p class="text-center">(Super Admin)</p>
             </div>
           </div>
           <div class="card-body">
             <div class="row">
               <div>
-                <label for="" class="form-label text-light">SA_Mail</label>
+                <label for="" class="form-label text-dark"><b>SA_Mail</b></label>
                 <input
                   type="text"
                   name=""
@@ -36,7 +36,7 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label text-light">SA_Password</label>
+                <label for="" class="form-label text-dark"><b>SA_Password</b></label>
                 <input
                   type="text"
                   name=""
@@ -63,10 +63,10 @@
               </div>
               <div class="text-center">
                 <button
-                  class="btn btn-success btn w-50 p-2 mt-4"
+                  class="btn btn-success text-dark btn w-50 p-2 mt-4"
                   (click)="login()"
                 >
-                  Sign-in
+                 <b>Sign-in</b>
                 </button>
               </div>
             </div>
