--- a/src/app/teamlead-dashboard/teamlead-dashboard.component.html
+++ b/src/app/teamlead-dashboard/teamlead-dashboard.component.html
@@ -22,7 +22,7 @@
           class="nav-link text-dark"
           routerLink="tl-profile"
           routerLinkActive="active"
-          >Profile</a
+          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder; "></i></a
         >
       </li>
       <li class="nav-item">
@@ -31,7 +31,7 @@
           routerLink="/"
           routerLinkActive="active"
           (click)="logout()"
-          >Logout</a
+          ><i class="bi bi-box-arrow-right" style="font-size: 30px; font-weight: bolder; "></i></a
         >
       </li>
     </ul>
@@ -46,18 +46,18 @@
         <div class="display-flex p-2">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="employeeregister">Add Employee</a>
+                    <a class="nav-link text-dark" routerLink="employeeregister"><b>Add Employee</b></a>
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="viewemployee">View Employee</a>
+                    <a class="nav-link text-dark" routerLink="viewemployee"><b>View Employee</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="teamlead">Add Task</a>
+                    <a class="nav-link text-dark" routerLink="teamlead"><b>Add Task</b></a>
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="edittask">View task</a>
+                    <a class="nav-link text-dark" routerLink="edittask"><b>View Task</b></a>
                 </li>
             </ul>
         </div>
