--- a/src/app/teamleadlogin/teamleadlogin.component.html
+++ b/src/app/teamleadlogin/teamleadlogin.component.html
@@ -6,14 +6,14 @@
           <form [formGroup]="loginForm">
             <div class="card-header">
               <div class="row">
-                <h1 class="text-center text-light">Login Form</h1>
+                <h1 class="text-center text-dark">Login Form</h1>
                 <p class="text-center">(TeamLead)</p>
               </div>
             </div>
             <div class="card-body">
               <div class="row">
                 <div>
-                  <label for="" class="form-label text-light">TL_Mail</label>
+                  <label for="" class="form-label text-dark"><b>TL_Mail</b></label>
                   <input
                     type="text"
                     name=""
@@ -37,8 +37,8 @@
                   </div>
                 </div>
                 <div>
-                  <label for="" class="form-label text-light"
-                    >TL_Password</label
+                  <label for="" class="form-label text-dark"
+                    ><b>TL_Password</b></label
                   >
                   <input
                     type="text"
@@ -64,10 +64,10 @@
                 </div>
                 <div class="text-center">
                   <button
-                    class="btn btn-success btn w-50 p-2 mt-4"
+                    class="btn btn-success text-dark btn w-50 p-2 mt-4"
                     (click)="login()"
                   >
-                    Sign-in
+                   <b>Sign-in</b>
                   </button>
                 </div>
               </div>
