--- a/src/app/teamleadregister/teamleadregister.component.html
+++ b/src/app/teamleadregister/teamleadregister.component.html
@@ -11,7 +11,7 @@
           <div class="card-body">
             <div class="row">
               <div>
-                <label for="" class="form-label text-success">TL_Name</label>
+                <label for="" class="form-label text-dark"><b>TL_Name</b></label>
                 <input
                   type="text"
                   name=""
@@ -36,7 +36,7 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label text-success"> TL_Mail</label>
+                <label for="" class="form-label text-dark"> <b>TL_Mail</b></label>
                 <input
                   type="text"
                   name=""
@@ -61,7 +61,7 @@
               </div>
 
               <div>
-                <label for="" class="form-label text-success">TL_Id</label>
+                <label for="" class="form-label text-dark"><b>TL_Id</b></label>
                 <input
                   type="text"
                   name=""
@@ -87,7 +87,7 @@
 
               </div>
               <div>
-                <label for="" class="form-label text-success">TL_Mobile_Number</label>
+                <label for="" class="form-label text-dark"><b>TL_Mobile_Number</b></label>
                 <input
                   type="text"
                   name=""
@@ -117,7 +117,7 @@
 
               </div>
               <div>
-                <label for="" class="form-label text-success">TL_Password</label>
+                <label for="" class="form-label text-dark"><b>TL_Password</b></label>
                 <input
                   type="text"
                   name=""
@@ -146,7 +146,7 @@
                   class="btn btn-success text-dark btn w-50 p-2 mt-4"
                   (click)="register()"
                 >
-                  Register
+                 <b> Register</b>
                 </button>
               </div>
             </div>
