--- a/src/app/viewadmin/viewadmin.component.html
+++ b/src/app/viewadmin/viewadmin.component.html
@@ -33,11 +33,11 @@
                 data-bs-target="#myEmptyModal"
                 (click)="editAdmin(admin)"
               >
-                Edit
+               <i class="bi bi-pencil-square"></i>
               </button>
               
               <button class="btn btn-danger" (click)="deleteAdmin(admin._id)">
-                Delete
+               <i class="bi bi-trash3"></i>
               </button>
               
             </td>
