--- a/src/app/viewteamlead/viewteamlead.component.html
+++ b/src/app/viewteamlead/viewteamlead.component.html
@@ -32,11 +32,11 @@
                 data-bs-target="#myEmptyModal"
                 (click)="editTl(teamlead)"
               >
-                Edit
+             <i class="bi bi-pencil-square"></i>
               </button>
               
               <button class="btn btn-danger" (click)="deleteTl(teamlead._id)">
-                Delete
+               <i class="bi bi-trash3"></i>
               </button>
               
             </td>
