changed backgrounds and some styles

--- a/src/app/a-profile/a-profile.component.html
+++ b/src/app/a-profile/a-profile.component.html
@@ -3,8 +3,8 @@
     <div class="col-md-10">
       <div class="card shadow">
         <form [formGroup]="profileForm">
-          <div class="card-header bg-primary text-white text-center">
-            <h4>Admin Profile</h4>
+          <div class="card-header  text-dark text-center">
+            <h2 class="mt-1"><b>Admin Profile</b></h2>
           </div>
           <div class="card-body">
             <div class="row">
@@ -50,12 +50,12 @@
                 </div>
                 <div class="text-center">
                   <button
-                    class="btn btn-success w-50"
+                    class="btn btn-success text-dark w-50"
                     data-bs-toggle="modal"
                     data-bs-target="#myEmptyModal"
                     (click)="editProfile(admin)"
                   >
-                    EDIT
+                    <b>EDIT</b>
                   </button>
                 </div>
               </div>
@@ -78,9 +78,9 @@
       <div class="modal-body">
         <div class="card">
           <form [formGroup]="editForm">
-            <div class="card-header bg-primary">
+            <div class="card-header ">
               <div class="row">
-                <h1 class="text-center text-white">Admin Details</h1>
+                <h1 class="text-center text-dark"><b>Admin Details</b></h1>
               </div>
             </div>
             <div class="card-body">
@@ -116,14 +116,14 @@
                 <label class="form-label fw-bold">Number</label>
                 <input type="" class="form-control" formControlName="Number" />
               </div>
-              <div class="text-center">
+              <div class="text-center ">
                 <button
-                  class="btn btn-success"
+                  class="btn btn-success text-dark"
                   data-bs-toggle="modal"
                   data-bs-target="#myEmptyModal"
                   (click)="update()"
                 >
-                  UPDATE
+                  <b>UPDATE</b>
                 </button>
               </div>
             </div>
