--- a/src/app/adminregister/adminregister.component.html
+++ b/src/app/adminregister/adminregister.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid  ">
+<div class="container-fluid mt-1 back ">
   <div class="row">
     <div class="col-sm-6 m-auto">
       <div class="card  border-0">
         <form [formGroup]="adminregisterForm">
           <div class="card-header border-0">
             <div class="row">
-              <h1 class="text-center text-danger mt-2">Admin Register</h1>
+              <h1 class="text-center text-danger mt-2"><b>Admin Register</b></h1>
             </div>
           </div>
           <div class="card-body">
