--- a/src/app/employeeregister/employeeregister.component.html
+++ b/src/app/employeeregister/employeeregister.component.html
@@ -5,7 +5,7 @@
         <form [formGroup]="employeeregisterForm">
           <div class="card-header">
             <div class="row">
-              <h1 class="text-center text-danger mt-2">Employee Register</h1>
+              <h1 class="text-center text-danger mt-2"><b>Employee Register</b></h1>
             </div>
           </div>
           <div class="card-body">
@@ -156,7 +156,7 @@
                   class="btn btn-success text-dark btn w-50 p-2 mt-4"
                   (click)="register()"
                 >
-                  <b>Register</b>>
+                  <b>Register</b>
                 </button>
               </div>
             </div>
