--- a/src/app/teamleadregister/teamleadregister.component.html
+++ b/src/app/teamleadregister/teamleadregister.component.html
@@ -5,7 +5,7 @@
         <form [formGroup]="tlregisterForm">
           <div class="card-header ">
             <div class="row">
-              <h1 class="text-center text-danger mt-2">TeamLead Register</h1>
+              <h1 class="text-center text-danger mt-2"><b>TeamLead Register</b></h1>
             </div>
           </div>
           <div class="card-body">
