--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -5,11 +5,11 @@
   <div class="row mt-5 justify-content-around">
     <div class="col-sm-4">
       <div class="row">
-        <h2 class="text-dark">Who We Are?</h2>
+        <h2 class="text-dark"><b>Who We Are?</b></h2>
       </div>
 
       <div class="row">
-        <p class="text-white">
+        <p class="text-dark">
           "VITA" can refer to several different technologies and organizations.
           Primarily, it refers to VITA, an organization that develops and
           promotes open standards for real-time, a telepresence robot used in
@@ -23,19 +23,19 @@
 
     <div class="col-sm-4">
       <div class="row">
-        <h2 class="text-dark">What We Do?</h2>
+        <h2 class="text-dark"><b>What We Do?</b></h2>
       </div>
 
       <div class="row">
-        <p class="text-white">
+        <p class="text-dark">
           Developing and promoting open standards for real-time, modular,
           embedded computing systems.
         </p>
-        <P class="text-white"
+        <P class="text-dark"
           >Developing and promoting open technology standards, improving
           interoperability, and advancing common technology.
         </P>
-        <p class="text-white">
+        <p class="text-dark">
           <b>Focus:</b> Providing IT solutions, including web development,
           mobile app development, and cybersecurity network solutions.
         </p>
