--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-md navbar-dark px-4 custom_navbar bg-light">
+<nav
+  class="navbar navbar-expand-md bg-white navbar-dark px-4 custom_navbar bg-light"
+>
   <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
-    >VITA OMS</a
+    >VITA <small style="font-size: 30px">OMS</small></a
   >
   <button
     class="navbar-toggler"
@@ -13,46 +15,54 @@
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ms-auto">
       <li class="nav-item">
         <a
-          class="nav-link text-dark "
+          class="nav-link text-dark"
           routerLink="a-profile"
           routerLinkActive="active"
-          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder; "></i></a
-        >
+          ><i
+            class="bi bi-person-circle"
+            style="font-size: 30px; font-weight: bolder"
+          ></i
+        ></a>
       </li>
       <li class="nav-item">
         <a
-          class="nav-link text-dark "
+          class="nav-link text-dark"
           routerLink="/"
           routerLinkActive="active"
           (click)="logout()"
-          ><i class="bi bi-box-arrow-right" style="font-size: 30px; font-weight: bolder; "></i></a
-        >
+          ><i
+            class="bi bi-box-arrow-right"
+            style="font-size: 30px; font-weight: bolder"
+          ></i
+        ></a>
       </li>
     </ul>
   </div>
 </nav>
-<div class="row ">
-  <div class="col-sm-2 ">
+<div class="row back">
+  <div class="col-sm-2">
     <div class="card card1 border-0 vh-100">
-        <div class="card-header">
-            <h2>Works!</h2>
-        </div>
-        <div class="display-flex p-2">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="teamleadregister"><b>Add Teamlead</b></a>
-
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="viewteamlead"><b>View Teamlead</b></a>
-                </li>
-            </ul>
-        </div>
+      <div class="card-header">
+        <h2>Works!</h2>
+      </div>
+      <div class="display-flex p-2">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-dark" routerLink="teamleadregister"
+              ><b>Add Teamlead</b></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" routerLink="viewteamlead"
+              ><b>View Teamlead</b></a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
   <div class="col-sm-10">
