--- a/src/app/adminlogin/adminlogin.component.html
+++ b/src/app/adminlogin/adminlogin.component.html
@@ -1,8 +1,8 @@
-<div class="container-fluid hom1">
+<div class="container-fluid m hom1">
   <div class="row">
     <div class="row">
       <div class="col-md-4 m-auto">
-        <div class="card w-100 mt-5">
+        <div class="card w-100 mt-4">
           <form [formGroup]="loginForm">
             <div class="card-header">
               <div class="row">
