--- a/src/app/employeelogin/employeelogin.component.css
+++ b/src/app/employeelogin/employeelogin.component.css
@@ -9,11 +9,11 @@
   max-width: 400px;
 }
 .btn {
-  background: linear-gradient(180deg, rgb(151, 191, 215), rgb(164, 164, 237));
+  background-color: whitesmoke;
 }
 .hom1 {
-  background-image: url("/images/bg4.jpg");
+  background-image: url("/images/bg6.jpg");
     background-repeat: no-repeat;
   background-size: cover;
-  height: 500px;
+  height: 485px;
 }
