--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,6 @@
 .custom_navbar {
   height: 100px;
-  background: linear-gradient(
-    90deg,
-    rgb(228, 218, 218),
-    rgb(174, 226, 241),
-    rgb(193, 215, 233)
-  );
+  background-color: white;
   
 }
 .company_name {
