--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div>
   <nav class="navbar navbar-expand-md navbar-dark px-4 custom_navbar bg-light">
+    <img src="/images/1630588948599.jpeg" alt="" class="h-100  " style="width: 170px;" routerLink="">
     <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
-      >VITA
+      >
     </a>
     <button
       class="navbar-toggler"
