--- a/src/app/sa-profile/sa-profile.component.html
+++ b/src/app/sa-profile/sa-profile.component.html
@@ -3,8 +3,8 @@
     <div class="col-md-10">
       <div class="card shadow">
         <form [formGroup]="profileForm">
-          <div class="card-header bg-primary text-white text-center">
-            <h4>Super Admin Profile</h4>
+          <div class="card-header  text-dark text-center">
+            <h2 class="mt-1"><b>Super Admin Profile</b></h2>
           </div>
           <div class="card-body">
             <div class="row">
