--- a/src/app/sp-dashboard/sp-dashboard.component.css
+++ b/src/app/sp-dashboard/sp-dashboard.component.css
@@ -1,18 +1,24 @@
-.card1{
-     background: linear-gradient(180deg,  rgb(185, 216, 244), rgb(203, 203, 237));
-    height: 100px;
-   
+.card1 {
+  background-color: rgba(247, 237, 237, 0.2);
+  backdrop-filter: blur(10px);
+  border-radius: 12px;
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  color: #000;
+  width: 100%;
+  max-width: 500px;
+  height: 150px;
 }
 .custom_navbar {
   height: 100px;
-  background: linear-gradient(
-    90deg,
-    rgb(228, 218, 218),
-    rgb(174, 226, 241),
-    rgb(193, 215, 233)
-  );
-  
+  background-color: black;
 }
 .company_name {
   font-size: 60px;
+}
+.back{
+  background-image: url("/images/bg6.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
 }
