--- a/src/app/sp-dashboard/sp-dashboard.component.html
+++ b/src/app/sp-dashboard/sp-dashboard.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark px-4 custom_navbar bg-light">
-  <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
-    >VITA OMS</a
+<nav class="navbar navbar-expand-md bg-white navbar-dark px-4 custom_navbar bg-light">
+  <a class="navbar-brand text-dark company_name fw-bold " routerLink="/"
+    >VITA <small style="font-size: 30px;">OMS</small></a
   >
   <button
     class="navbar-toggler"
@@ -21,7 +21,7 @@
           class="nav-link text-dark"
           routerLink="sa-profile"
           routerLinkActive="active"
-          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder; "></i></a
+          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder;  "></i></a
         >
       </li>
       <li class="nav-item">
@@ -36,7 +36,7 @@
     </ul>
   </div>
 </nav>
-<div class="row">
+<div class="row back">
   <div class="col-sm-2">
     <div class="card card1 border-0 vh-100">
       <div class="card-header">
