--- a/src/app/teamlead-dashboard/teamlead-dashboard.component.html
+++ b/src/app/teamlead-dashboard/teamlead-dashboard.component.html
@@ -1,7 +1,7 @@
 
-<nav class="navbar navbar-expand-md navbar-dark px-4 custom_navbar bg-light">
+<nav class="navbar navbar-expand-md bg-white navbar-dark px-4 custom_navbar bg-light">
   <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
-    >VITA OMS</a
+    >VITA <small style="font-size: 30px;">OMS</small></a
   >
   <button
     class="navbar-toggler"
@@ -37,7 +37,7 @@
     </ul>
   </div>
 </nav>
-<div class="row ">
+<div class="row back">
   <div class="col-sm-2 ">
     <div class="card card1 border-0 vh-100">
         <div class="card-header">
@@ -50,12 +50,13 @@
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="viewemployee"><b>View Employee</b></a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link text-dark" routerLink="teamlead"><b>Add Task</b></a>
 
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" routerLink="viewemployee"><b>View Employee</b></a>
+                </li>
+                
                 <li class="nav-item">
                     <a class="nav-link text-dark" routerLink="edittask"><b>View Task</b></a>
                 </li>
