--- a/src/app/teamlead/teamlead.component.html
+++ b/src/app/teamlead/teamlead.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-1">
   <div class="row">
     <div class="col-sm-6 m-auto">
       <div class="card w-75">
         <form [formGroup]="taskForm">
           <div class="card-header">
             <div class="row">
-              <h3 class="text-center text-danger">Task Data</h3>
+              <h1 class="text-center text-danger mt-2"><b>Task Data</b></h1>
             </div>
           </div>
           <div class="card-body">
@@ -43,7 +43,7 @@
                   class="btn btn-success text-dark btn w-50 p-2 mt-4"
                   (click)="task()"
                 >
-                  <b>Task</b>
+                  <b>Submit</b>
                 </button>
               </div>
             </div>
