--- a/src/app/teamleadregister/teamleadregister.component.css
+++ b/src/app/teamleadregister/teamleadregister.component.css
@@ -1,5 +1,5 @@
 .card-header{
-     background: linear-gradient(180deg, rgb(150, 200, 224), rgb(186, 186, 240));
+     background-color: whitesmoke;
     height: 90px;
     
 }
@@ -17,5 +17,5 @@
   max-width: 500px;
 }
 .btn {
-  background: linear-gradient(180deg,  rgb(147, 188, 226), rgb(165, 165, 224));
+  background-color: whitesmoke;
 }
