--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-md bg-white navbar-dark px-4 custom_navbar bg-light"
+  class="navbar navbar-expand-md bg-white sticky-top navbar-dark px-4 custom_navbar bg-light"
 >
   <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
     >VITA <small style="font-size: 30px">OMS</small></a
@@ -45,7 +45,7 @@
 </nav>
 <div class="row back">
   <div class="col-sm-2">
-    <div class="card card1 border-0 vh-100">
+    <div class="card card1 mt-1 border-0 vh-100">
       <div class="card-header">
         <h2>Works!</h2>
       </div>
