--- a/src/app/sp-dashboard/sp-dashboard.component.html
+++ b/src/app/sp-dashboard/sp-dashboard.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-white navbar-dark px-4 custom_navbar bg-light">
+<nav class="navbar navbar-expand-md bg-white sticky-top navbar-dark px-4 custom_navbar">
   <a class="navbar-brand text-dark company_name fw-bold " routerLink="/"
     >VITA <small style="font-size: 30px;">OMS</small></a
   >
@@ -10,6 +10,7 @@
     aria-controls="navbarNav"
     aria-expanded="false"
     aria-label="Toggle navigation"
+    
   >
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -38,7 +39,7 @@
 </nav>
 <div class="row back">
   <div class="col-sm-2">
-    <div class="card card1 border-0 vh-100">
+    <div class="card card1  mt-1 border-0 vh-100">
       <div class="card-header">
         <h2>Works!</h2>
       </div>
