--- a/src/app/teamleadregister/teamleadregister.component.css
+++ b/src/app/teamleadregister/teamleadregister.component.css
@@ -8,7 +8,7 @@
  }
  .card {
   background-color: rgba(247, 237, 237, 0.2);
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px); */
   border-radius: 12px;
   
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
