--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div>
-  <nav class="navbar navbar-expand-md navbar-dark px-4 custom_navbar bg-light">
+<div >
+  <nav class="navbar navbar-expand-md navbar-dark sticky-top px-4 custom_navbar bg-light">
     <img src="/images/1630588948599.jpeg" alt="" class="h-100  " style="width: 170px;" routerLink="">
     <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
       >
@@ -12,6 +12,8 @@
       aria-controls="navbarNav"
       aria-expanded="false"
       aria-label="Toggle navigation"
+      style="color: blue;"
+      
     >
       <span class="navbar-toggler-icon"></span>
     </button>
