--- a/src/app/sp-dashboard/sp-dashboard.component.css
+++ b/src/app/sp-dashboard/sp-dashboard.component.css
@@ -1,6 +1,6 @@
 .card1 {
   background-color: rgba(247, 237, 237, 0.2);
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px); */
   border-radius: 12px;
 
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -10,7 +10,7 @@
   height: 150px;
 }
 .custom_navbar {
-  height: 100px;
+  /* height: 100px; */
   background-color: black;
 }
 .company_name {
