--- a/src/app/teamlead-dashboard/teamlead-dashboard.component.html
+++ b/src/app/teamlead-dashboard/teamlead-dashboard.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-md bg-white navbar-dark px-4 custom_navbar bg-light">
+<nav class="navbar navbar-expand-md bg-white sticky-top navbar-dark px-4 custom_navbar bg-light">
   <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
     >VITA <small style="font-size: 30px;">OMS</small></a
   >
@@ -39,7 +39,7 @@
 </nav>
 <div class="row back">
   <div class="col-sm-2 ">
-    <div class="card card1 border-0 vh-100">
+    <div class="card card1  mt-1 border-0 vh-100">
         <div class="card-header">
             <h2>Works!</h2>
         </div>
