--- a/src/app/teamleadlogin/teamleadlogin.component.css
+++ b/src/app/teamleadlogin/teamleadlogin.component.css
@@ -6,7 +6,7 @@
 }
 .card {
   background-color: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(10px);
+  /* backdrop-filter: blur(10px); */
   border-radius: 12px;
   padding: 2rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
